# food-delivery-optimizer

./: .gitignore  README.md  package-lock.json  package.json  server.js
backend/: CMakeLists.txt
backend/include/: database.h  graph.h  server.h
backend/src/: database.cpp  graph.cpp  server.cpp
database/: FullDatabaseSchema.sql  RestaurantTable.sql
frontend/: admin_login.html  admin_login.js  agent.css  agent.html  agent.js  animation.css  charts.js  customer.css  customer.html  customer.js  dashboard.css  dashboard.html  dashboard.js  form.css  index.css  index.html  location.css  location.html  location.js  login.css  login.html  login.js  order.css  order.js  orders.html  register.html  register.js  reoprt.css  report.js  reports.html  restaruent.html  restarunt.css  resturant.js  route.css  route.js  routes.html  setting.css  setting.html  setting.js
